--- a/stylesheets/my_table_v2.css
+++ b/stylesheets/my_table_v2.css
@@ -110,4 +110,17 @@ th {
   }
 
 
+/* Cells in even rows (2,4,6...) are one color */ 
+tr:nth-child(even) td { background: #F1F1F1; }   
+
+/* Cells in odd rows (1,3,5...) are another (excludes header cells)  */ 
+tr:nth-child(odd) td { background: #FEFEFE; }  
+
+tr td:hover { background: #666; color: #FFF; } /* Hover cell effect! */
+
+.content-loader tr td {
+    white-space: nowrap;
+}
+
+
 
